--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-APP_NAME=Laravel
+A
+PP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,8 +12,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=clvsc_fix
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=clvsc_fix
+DB_PASSWORD=L9arvccbJqb8rLad
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
